--- a/.htaccess
+++ b/.htaccess
@@ -6,9 +6,9 @@
 
 # END WordPress
 # BEGIN Simply Static
-# Las directivas (líneas) entre «BEGIN Simply Static» y «END Simply Static» son
-# generadas dinámicamente y solo deberían ser modificadas mediante filtros de WordPress.
-# Cualquier cambio en las directivas que hay entre esos marcadores serán sobrescritas.
+# The directives (lines) between "BEGIN Simply Static" and "END Simply Static" are
+# dynamically generated, and should only be modified via WordPress filters.
+# Any changes to the directives between these markers will be overwritten.
 <Files "C:\xampp\htdocs\adm-freddy_copa_uyuni/wp-content/uploads\simply-static\9f3e2afda1a80affe226968fc2ffb42e-debug.txt">
 require all denied
 require host localhost
